# fullstack-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md
start/client/: Procfile  codegen.yaml  package-lock.json  package.json
start/client/public/: index.html
start/client/src/: index.tsx  test-utils.tsx
start/client/src/components/: header.tsx  login-form.tsx
start/client/src/components/__tests__/: launch-detail.tsx  launch-tile.tsx
start/client/src/containers/: action-button.tsx  book-trips.tsx  cart-item.tsx  logout-button.tsx
start/client/src/containers/__tests__/: book-trips.tsx
start/client/src/pages/: cart.tsx  launch.tsx  launches.tsx  profile.tsx
start/client/src/pages/__tests__/: login.tsx
start/server/: Procfile  package-lock.json  package.json  pyproject.toml  setup.cfg  tox.ini
start/server/core/: admin.py  apps.py  forms.py  graphql.py  http.py  log.py  models.py  pagination.py  request.py  schema.graphql  schema.py  signals.py  views.py
start/server/core/graphql/: __init__.py  scalars.py  schema.graphql  schema.py
start/server/core/graphql/types/: __init__.py  launch.py  mission.py  mutation.py  query.py  rocket.py  user.py
start/server/core/management/commands/: demodata.py
start/server/core/migrations/: 0001_initial.py
start/server/core/templates/common/: app.html
start/server/server/: settings.py  urls.py
