[tool.black]
line-length = 99

[tool.isort]
known_first_party = ["core"]
line_length = 99
profile = "black"

[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Zach Waggoner <zach.waggoner1@gmail.com>"]

[tool.poetry.dependencies]
django = "^3.1.2"
python = "^3.9"

[tool.poetry.dev-dependencies]
django-stubs = "^1.7.0"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-broken-line = "^0.3.0"
flake8-bugbear = "^21.3.2"
flake8-builtins = "^1.5.3"
flake8-colors = "^0.1.6"
flake8-comprehensions = "^3.3.0"
flake8-debugger = "^4.0.0"
flake8-django = "^1.1.1"
flake8-print = "^4.0.0"
flake8-string-format = "^0.3.0"
honcho = "^1.0.1"
mypy = "^0.812"
pep8-naming = "^0.11.1"
pre-commit = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
